--- a/index.html
+++ b/index.html
@@ -36,10 +36,80 @@
     </ul>
   </nav>
   
-  <!-- CFU Section -->
+  <!-- CFU Section with all 23 CFUs -->
   <section id="cfu">
     <h2 class="section-heading">CFU - Check For Understanding</h2>
-    <p>Here, you can add all your CFU reflections, notes, or summaries.</p>
+    <ol>
+      <li>
+        <strong>CFU 1:</strong> [Your content for CFU 1]
+      </li>
+      <li>
+        <strong>CFU 2:</strong> [Your content for CFU 2]
+      </li>
+      <li>
+        <strong>CFU 3:</strong> [Your content for CFU 3]
+      </li>
+      <li>
+        <strong>CFU 4:</strong> [Your content for CFU 4]
+      </li>
+      <li>
+        <strong>CFU 5:</strong> [Your content for CFU 5]
+      </li>
+      <li>
+        <strong>CFU 6:</strong> [Your content for CFU 6]
+      </li>
+      <li>
+        <strong>CFU 7:</strong> [Your content for CFU 7]
+      </li>
+      <li>
+        <strong>CFU 8:</strong> [Your content for CFU 8]
+      </li>
+      <li>
+        <strong>CFU 9:</strong> [Your content for CFU 9]
+      </li>
+      <li>
+        <strong>CFU 10:</strong> [Your content for CFU 10]
+      </li>
+      <li>
+        <strong>CFU 11:</strong> [Your content for CFU 11]
+      </li>
+      <li>
+        <strong>CFU 12:</strong> [Your content for CFU 12]
+      </li>
+      <li>
+        <strong>CFU 13:</strong> [Your content for CFU 13]
+      </li>
+      <li>
+        <strong>CFU 14:</strong> [Your content for CFU 14]
+      </li>
+      <li>
+        <strong>CFU 15:</strong> [Your content for CFU 15]
+      </li>
+      <li>
+        <strong>CFU 16:</strong> [Your content for CFU 16]
+      </li>
+      <li>
+        <strong>CFU 17:</strong> [Your content for CFU 17]
+      </li>
+      <li>
+        <strong>CFU 18:</strong> [Your content for CFU 18]
+      </li>
+      <li>
+        <strong>CFU 19:</strong> [Your content for CFU 19]
+      </li>
+      <li>
+        <strong>CFU 20:</strong> [Your content for CFU 20]
+      </li>
+      <li>
+        <strong>CFU 21:</strong> [Your content for CFU 21]
+      </li>
+      <li>
+        <strong>CFU 22:</strong> [Your content for CFU 22]
+      </li>
+      <li>
+        <strong>CFU 23:</strong> [Your content for CFU 23]
+      </li>
+    </ol>
   </section>
   
   <!-- Projects Section -->
@@ -61,7 +131,7 @@
   </section>
   
   <footer>
-    <p>&copy; 2024 Vashti Dalchand</p>
+    <p>© 2024 Vashti Dalchand</p>
   </footer>
 </body>
 </html>
