--- a/index.html
+++ b/index.html
@@ -36,78 +36,78 @@
     </ul>
   </nav>
   
-  <!-- CFU Section with all 23 CFUs -->
+  <!-- CFU Section with links to CodeSkulptor -->
   <section id="cfu">
     <h2 class="section-heading">CFU - Check For Understanding</h2>
     <ol>
       <li>
-        <strong>CFU 1:</strong> [Your content for CFU 1]
+        <a href="https://codeskulptor.org/your-cfu1-link" target="_blank"><strong>CFU 1:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 2:</strong> [Your content for CFU 2]
+        <a href="https://codeskulptor.org/your-cfu2-link" target="_blank"><strong>CFU 2:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 3:</strong> [Your content for CFU 3]
+        <a href="https://codeskulptor.org/your-cfu3-link" target="_blank"><strong>CFU 3:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 4:</strong> [Your content for CFU 4]
+        <a href="https://codeskulptor.org/your-cfu4-link" target="_blank"><strong>CFU 4:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 5:</strong> [Your content for CFU 5]
+        <a href="https://codeskulptor.org/your-cfu5-link" target="_blank"><strong>CFU 5:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 6:</strong> [Your content for CFU 6]
+        <a href="https://codeskulptor.org/your-cfu6-link" target="_blank"><strong>CFU 6:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 7:</strong> [Your content for CFU 7]
+        <a href="https://codeskulptor.org/your-cfu7-link" target="_blank"><strong>CFU 7:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 8:</strong> [Your content for CFU 8]
+        <a href="https://codeskulptor.org/your-cfu8-link" target="_blank"><strong>CFU 8:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 9:</strong> [Your content for CFU 9]
+        <a href="https://codeskulptor.org/your-cfu9-link" target="_blank"><strong>CFU 9:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 10:</strong> [Your content for CFU 10]
+        <a href="https://codeskulptor.org/your-cfu10-link" target="_blank"><strong>CFU 10:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 11:</strong> [Your content for CFU 11]
+        <a href="https://codeskulptor.org/your-cfu11-link" target="_blank"><strong>CFU 11:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 12:</strong> [Your content for CFU 12]
+        <a href="https://codeskulptor.org/your-cfu12-link" target="_blank"><strong>CFU 12:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 13:</strong> [Your content for CFU 13]
+        <a href="https://codeskulptor.org/your-cfu13-link" target="_blank"><strong>CFU 13:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 14:</strong> [Your content for CFU 14]
+        <a href="https://codeskulptor.org/your-cfu14-link" target="_blank"><strong>CFU 14:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 15:</strong> [Your content for CFU 15]
+        <a href="https://codeskulptor.org/your-cfu15-link" target="_blank"><strong>CFU 15:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 16:</strong> [Your content for CFU 16]
+        <a href="https://codeskulptor.org/your-cfu16-link" target="_blank"><strong>CFU 16:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 17:</strong> [Your content for CFU 17]
+        <a href="https://codeskulptor.org/your-cfu17-link" target="_blank"><strong>CFU 17:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 18:</strong> [Your content for CFU 18]
+        <a href="https://codeskulptor.org/your-cfu18-link" target="_blank"><strong>CFU 18:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 19:</strong> [Your content for CFU 19]
+        <a href="https://codeskulptor.org/your-cfu19-link" target="_blank"><strong>CFU 19:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 20:</strong> [Your content for CFU 20]
+        <a href="https://codeskulptor.org/your-cfu20-link" target="_blank"><strong>CFU 20:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 21:</strong> [Your content for CFU 21]
+        <a href="https://codeskulptor.org/your-cfu21-link" target="_blank"><strong>CFU 21:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 22:</strong> [Your content for CFU 22]
+        <a href="https://codeskulptor.org/your-cfu22-link" target="_blank"><strong>CFU 22:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <strong>CFU 23:</strong> [Your content for CFU 23]
+        <a href="https://codeskulptor.org/your-cfu23-link" target="_blank"><strong>CFU 23:</strong> View on CodeSkulptor</a>
       </li>
     </ol>
   </section>
