--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2 class="section-heading">CFU - Check For Understanding</h2>
     <ol>
       <li>
-        <a href="https://codeskulptor.org/your-cfu1-link" target="_blank"><strong>CFU 1:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank"><strong>CFU 1:</strong> View on CodeSkulptor</a>
       </li>
       <li>
         <a href="https://codeskulptor.org/your-cfu2-link" target="_blank"><strong>CFU 2:</strong> View on CodeSkulptor</a>
