--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank"><strong>CFU 1:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu2-link" target="_blank"><strong>CFU 2:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_d7L8Lfc46Ecr8Ow.py" target="_blank"><strong>CFU 2:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu3-link" target="_blank"><strong>CFU 3:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_j4zfCUMp8Xuu3ib.py" target="_blank"><strong>CFU 3:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu4-link" target="_blank"><strong>CFU 4:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_1s8MlKcp81TR5Lu.py" target="_blank"><strong>CFU 4:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu5-link" target="_blank"><strong>CFU 5:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_4YsbtlGbI6ZoRlW.py" target="_blank"><strong>CFU 5:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu6-link" target="_blank"><strong>CFU 6:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_JCCV986mHyDC0Is.py" target="_blank"><strong>CFU 6:</strong> View on CodeSkulptor</a>
       </li>
       <li>
         <a href="https://codeskulptor.org/your-cfu7-link" target="_blank"><strong>CFU 7:</strong> View on CodeSkulptor</a>
@@ -65,7 +65,7 @@
         <a href="https://codeskulptor.org/your-cfu8-link" target="_blank"><strong>CFU 8:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu9-link" target="_blank"><strong>CFU 9:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_Dc8bCFeKNfN2ldC.py" target="_blank"><strong>CFU 9:</strong> View on CodeSkulptor</a>
       </li>
       <li>
         <a href="https://codeskulptor.org/your-cfu10-link" target="_blank"><strong>CFU 10:</strong> View on CodeSkulptor</a>
