--- a/index.html
+++ b/index.html
@@ -59,55 +59,43 @@
         <a href="https://py3.codeskulptor.org/#user310_JCCV986mHyDC0Is.py" target="_blank"><strong>CFU 6:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu7-link" target="_blank"><strong>CFU 7:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://codeskulptor.org/your-cfu8-link" target="_blank"><strong>CFU 8:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
         <a href="https://py3.codeskulptor.org/#user310_Dc8bCFeKNfN2ldC.py" target="_blank"><strong>CFU 9:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu10-link" target="_blank"><strong>CFU 10:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_TBZxbr3OgbwWPsp.py" target="_blank"><strong>CFU 10:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu11-link" target="_blank"><strong>CFU 11:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_y7GkxpLOlRdmErG.py" target="_blank"><strong>CFU 12:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu12-link" target="_blank"><strong>CFU 12:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_ARG6l9BSNM7X1gb.py" target="_blank"><strong>CFU 13:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu13-link" target="_blank"><strong>CFU 13:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_RsArSjpHKnIfl7N.py" target="_blank"><strong>CFU 14:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu14-link" target="_blank"><strong>CFU 14:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_j9W16hWKFKDCiNe.py" target="_blank"><strong>CFU 15:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu15-link" target="_blank"><strong>CFU 15:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_tGEgxX0s0lnIzrX.py" target="_blank"><strong>CFU 16:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu16-link" target="_blank"><strong>CFU 16:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_TokbLAh6EruUMJN.py" target="_blank"><strong>CFU 17:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu17-link" target="_blank"><strong>CFU 17:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_vpLu0Nm8zl0xph9.py" target="_blank"><strong>CFU 18:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu18-link" target="_blank"><strong>CFU 18:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_xcl2TjV3unA1WQm.py" target="_blank"><strong>CFU 19:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu19-link" target="_blank"><strong>CFU 19:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_O34XKUCScjmUzFa.py" target="_blank"><strong>CFU 20:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu20-link" target="_blank"><strong>CFU 20:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_gKFM9NEtX4tJJfY.py" target="_blank"><strong>CFU 21:</strong> View on CodeSkulptor</a>
       </li>
       <li>
-        <a href="https://codeskulptor.org/your-cfu21-link" target="_blank"><strong>CFU 21:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://codeskulptor.org/your-cfu22-link" target="_blank"><strong>CFU 22:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://codeskulptor.org/your-cfu23-link" target="_blank"><strong>CFU 23:</strong> View on CodeSkulptor</a>
+        <a href="https://py3.codeskulptor.org/#user310_HLVBpl7fMyvJcdJ.py" target="_blank"><strong>CFU 23:</strong> View on CodeSkulptor</a>
       </li>
     </ol>
   </section>
