--- a/index.html
+++ b/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Junior Portfolio - Vashti Dalchand</title>
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+  <!-- Stylesheet -->
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <!-- Favicon -->
   <link rel="icon" href="fav.png" type="image/png" />
 </head>
 <body>
+  <!-- Header -->
   <header>
     <h1>Welcome to My Junior Portfolio</h1>
   </header>
   
-  <div class="banner">
+  <!-- Banner Section -->
+  <section class="banner">
     <h1>Thomas A. Edison CTE HS</h1>
     <h2>Web Development</h2>
     <h3>Python</h3>
     <h4>Vashti Dalchand</h4>
-  </div>
-  
-  <!-- About Me Section -->
-  <section>
-    <h2 class="section-heading">About Me</h2>
-    <p>My name is Vashti Dalchand, and I’m 17 years old. I consider myself an outgoing person who loves meeting new people and trying new things. Right now, I’m in my junior year of high school, taking a Career and Technical Education (CTE) class in web development. It's a really exciting subject because it allows me to learn how to create websites and work with different technologies that shape how we use the internet every day. Recently, I've been diving into Python, which is a programming language used in many projects. I’m passionate about learning and growing, and I look forward to my journey ahead.</p>
   </section>
   
-  <!-- Navigation Menu -->
+  <!-- About Me -->
+  <section id="about">
+    <h2 class="section-heading">About Me</h2>
+    <p>
+      My name is Vashti Dalchand, and I’m 17 years old. I consider myself an outgoing person who loves meeting new people and trying new things. Right now, I’m in my junior year of high school, taking a Career and Technical Education (CTE) class in web development. It's a really exciting subject because it allows me to learn how to create websites and work with different technologies that shape how we use the internet every day. Recently, I've been diving into Python, which is a programming language used in many projects. I’m passionate about learning and growing, and I look forward to my journey ahead.
+    </p>
+  </section>
+  
+  <!-- Navigation -->
   <nav>
     <ul>
       <li><a href="#cfu">CFU</a></li>
@@ -36,7 +43,7 @@
     </ul>
   </nav>
   
-  <!-- CFU Section with links to CodeSkulptor -->
+  <!-- CFU Section -->
   <section id="cfu">
     <h2 class="section-heading">CFU - Check For Understanding</h2>
     <ol>
@@ -100,26 +107,27 @@
     </ol>
   </section>
   
-  <!-- Projects Section -->
+  <!-- Projects -->
   <section id="projects">
     <h2 class="section-heading">Projects</h2>
     <p>Details about your web development projects and other work.</p>
   </section>
   
-  <!-- Labs Section -->
+  <!-- Labs -->
   <section id="labs">
     <h2 class="section-heading">Labs</h2>
     <p>Descriptions and images of your lab activities.</p>
   </section>
   
-  <!-- Journals Section -->
+  <!-- Journals -->
   <section id="journals">
     <h2 class="section-heading">Journals</h2>
     <p>Reflections, daily logs, or journal entries.</p>
   </section>
   
+  <!-- Footer -->
   <footer>
-    <p>© 2024 Vashti Dalchand</p>
+    <p>&copy; 2024 Vashti Dalchand</p>
   </footer>
 </body>
 </html>
