--- a/index.html
+++ b/index.html
@@ -43,70 +43,16 @@
     </ul>
   </nav>
   
-  <!-- CFU Section -->
-  <section id="cfu">
-    <h2 class="section-heading">CFU - Check For Understanding</h2>
-    <ol>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank"><strong>CFU 1:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_d7L8Lfc46Ecr8Ow.py" target="_blank"><strong>CFU 2:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_j4zfCUMp8Xuu3ib.py" target="_blank"><strong>CFU 3:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_1s8MlKcp81TR5Lu.py" target="_blank"><strong>CFU 4:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_4YsbtlGbI6ZoRlW.py" target="_blank"><strong>CFU 5:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_JCCV986mHyDC0Is.py" target="_blank"><strong>CFU 6:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_Dc8bCFeKNfN2ldC.py" target="_blank"><strong>CFU 9:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_TBZxbr3OgbwWPsp.py" target="_blank"><strong>CFU 10:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_y7GkxpLOlRdmErG.py" target="_blank"><strong>CFU 12:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_ARG6l9BSNM7X1gb.py" target="_blank"><strong>CFU 13:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_RsArSjpHKnIfl7N.py" target="_blank"><strong>CFU 14:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_j9W16hWKFKDCiNe.py" target="_blank"><strong>CFU 15:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_tGEgxX0s0lnIzrX.py" target="_blank"><strong>CFU 16:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_TokbLAh6EruUMJN.py" target="_blank"><strong>CFU 17:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_vpLu0Nm8zl0xph9.py" target="_blank"><strong>CFU 18:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_xcl2TjV3unA1WQm.py" target="_blank"><strong>CFU 19:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_O34XKUCScjmUzFa.py" target="_blank"><strong>CFU 20:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_gKFM9NEtX4tJJfY.py" target="_blank"><strong>CFU 21:</strong> View on CodeSkulptor</a>
-      </li>
-      <li>
-        <a href="https://py3.codeskulptor.org/#user310_HLVBpl7fMyvJcdJ.py" target="_blank"><strong>CFU 23:</strong> View on CodeSkulptor</a>
-      </li>
-    </ol>
-  </section>
-  
+<!-- CFU Section in index.html -->
+<section id="cfu" class="section">
+  <h2 class="section-heading">CFU - Check For Understanding</h2>
+  <div style="border: 1px solid #ccc; padding: 20px; max-width: 400px; margin: 20px auto; border-radius: 8px;">
+    <p style="text-align: center; font-size: 18px;">Click here to view</p>
+    <p style="text-align: center;">
+      <a href="cfu.html" target="_blank" style="font-size: 20px; color: #2980B9; text-decoration: none;">View CFU Links</a>
+    </p>
+  </div>
+</section>
   <!-- Projects -->
   <section id="projects">
     <h2 class="section-heading">Projects</h2>
