--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <!-- Favicon -->
   <link rel="icon" href="fav.png" type="image/png" />
+  <a href="design.html">Check out my design</a>
 </head>
 <body>
   <!-- Header -->
