--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
     <h4>Vashti Dalchand</h4>
   </section>
   
-  <!-- About Me -->
-  <section id="about">
-    <h2 class="section-heading">About Me</h2>
-    <p>
-      My name is Vashti Dalchand, and I’m 17 years old. I consider myself an outgoing person who loves meeting new people and trying new things. Right now, I’m in my junior year of high school, taking a Career and Technical Education (CTE) class in web development. It's a really exciting subject because it allows me to learn how to create websites and work with different technologies that shape how we use the internet every day. Recently, I've been diving into Python, which is a programming language used in many projects. I’m passionate about learning and growing, and I look forward to my journey ahead.
-    </p>
-  </section>
+<section id="about">
+  <h2 class="section-heading">About Me</h2>
+  <p>
+    Hello! My name is Vashti Dalchand, and I am a passionate 17-year-old student eager to explore the world of web development and programming. I thrive on meeting new people, embracing new challenges, and continuously learning new skills. Currently, I am in my junior year of high school, enrolled in a Career and Technical Education (CTE) class focused on web development, which fuels my excitement for creating engaging and functional websites. Recently, I’ve started diving into Python programming, discovering its versatility and power in building applications. I believe that curiosity and perseverance are key to success, and I look forward to expanding my knowledge and making meaningful projects that inspire others. I'm dedicated to my growth and excited for the opportunities ahead.
+  </p>
+</section>
   
   <!-- Navigation -->
   <nav>
