--- a/cfu.html
+++ b/cfu.html
@@ -42,6 +42,8 @@
   </style>
 </head>
 <body>
+  <!-- Go Back Button -->
+  <a href="index.html" class="go-back">Go Back</a>
   <h1>CFU - Check For Understanding</h1>
   <ul>
     <li><a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank">CFU 1</a></li>
