--- a/projects.html
+++ b/projects.html
@@ -20,21 +20,15 @@
         src="https://www.canva.com/design/DAGgrk0zhx4/3ohNTeXspwLeCNDI90d7Ew/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
       </iframe>
     </div>
-    <a href="https://www.canva.com/design/DAGgrk0zhx4/3ohNTeXspwLeCNDI90d7Ew/view?utm_content=DAGgrk0zhx4&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank" rel="noopener">Infy</a>
+    <div style="text-align: center; margin-top: 10px;">
+      <a href="https://www.canva.com/design/DAGgrk0zhx4/3ohNTeXspwLeCNDI90d7Ew/view?utm_content=DAGgrk0zhx4&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank" rel="noopener" style="font-size: 16px; color: #007BFF; text-decoration: none;">Infy</a>
+    </div>
   </section>
 
-  <!-- App Project Embed -->
+  <!-- Figma App Embed -->
   <section id="app-project" style="margin-top:50px;">
     <h2>My App Project</h2>
-    <!-- Replace the src attribute with your actual app URL -->
-    <iframe src="https://yourappurl.com" 
-            width="100%" height="600" style="border: none; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"></iframe>
-    <!-- Alternatively, link to your app if not hosted -->
-    <!-- <a href="your-app-folder/index.html" target="_blank">Open My App</a> -->
+    <iframe style="border: none; width: 100%; height: 600px;" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/bcC6yrZE3m0BBOphdeQgir/PyMasters---Mockup?node-id=236-3&starting-point-node-id=236%3A3"></iframe>
   </section>
-
-  <footer>
-    <p>© 2024 Vashti Dalchand</p>
-  </footer>
 </body>
 </html>
