--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,79 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects - Vashti Dalchand</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <style>
+    /* Styles specific to Projects page */
+
+    /* Import Google Fonts */
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Dancing+Script&family=Great+Vibes&family=Montserrat&display=swap');
+
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #e0e0e0; /* Light grey background for the projects page */
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    /* "Go Back" button styles */
+    .go-back {
+      display: inline-block;
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      background-color: #4A90E2; /* Blue button */
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-family: 'Great Vibes', cursive;
+      font-size: 18px;
+      transition: background-color 0.3s;
+    }
+
+    .go-back:hover {
+      background-color: #357ABD; /* Darker blue on hover */
+    }
+
+    /* Headings (h1, h2, etc.) styles */
+    h1, h2, h3, h4, .section-heading {
+      font-family: 'Pacifico', cursive;
+      font-size: 36px;
+      margin: 10px 0;
+      border: 2px solid #ccc;
+      padding: 10px;
+      background-color: #f8bbd0; /* Light pink background for headings */
+      border-radius: 8px;
+      color: #4A90E2; /* Blue color for headings */
+    }
+
+    /* Sections background and layout */
+    section {
+      margin: 20px 0;
+      padding: 20px;
+      background: #f5f5f5; /* Slightly darker grey for section background */
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    /* Paragraph styling inside sections */
+    #about p {
+      font-family: 'Dancing Script', cursive;
+      font-size: 20px;
+      line-height: 1.6;
+      margin-top: 10px;
+    }
+
+    /* Embeds (if any) */
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    /* Additional styles as needed */
+
+  </style>
 </head>
 <body>
   <!-- "Go Back" Button -->
