--- a/index.html
+++ b/index.html
@@ -52,11 +52,16 @@
     </p>
   </div>
 </section>
-  <!-- Projects -->
-  <section id="projects">
-    <h2 class="section-heading">Projects</h2>
-    <p>Details about your web development projects and other work.</p>
-  </section>
+ <!-- Projects Section in index.html -->
+<section id="projects" class="section">
+  <h2 class="section-heading">Projects</h2>
+  <div style="border: 1px solid #ccc; padding: 20px; max-width: 400px; margin: 20px auto; border-radius: 8px;">
+    <p style="text-align: center; font-size: 18px;">Click here to view my projects</p>
+    <p style="text-align: center;">
+      <a href="projects.html" target="_blank" style="font-size: 20px; color: #2980B9; text-decoration: none;">View Projects</a>
+    </p>
+  </div>
+</section>
   
   <!-- Labs -->
   <section id="labs">
