--- a/index.html
+++ b/index.html
@@ -5,36 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Junior Portfolio - Vashti Dalchand</title>
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
   <!-- Stylesheet -->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" />
   <!-- Favicon -->
   <link rel="icon" href="fav.png" type="image/png" />
 </head>
 <body>
   <!-- Header -->
   <header>
-    <h1>Welcome to My Junior Portfolio</h1>
+    <h1>Vashti Dalchand</h1>
+    <p class="subtitle">Junior Web Developer & Programmer</p>
   </header>
-  
-  <!-- Banner Section -->
-  <section class="banner">
-    <h1>Thomas A. Edison CTE HS</h1>
-    <h2>Web Development</h2>
-    <h3>Python</h3>
-    <h4>Vashti Dalchand</h4>
-  </section>
-  
-<section id="about">
-  <h2 class="section-heading">About Me</h2>
-  <p>
-    Hello! My name is Vashti Dalchand, and I am a passionate 17-year-old student eager to explore the world of web development and programming. I thrive on meeting new people, embracing new challenges, and continuously learning new skills. Currently, I am in my junior year of high school, enrolled in a Career and Technical Education (CTE) class focused on web development, which fuels my excitement for creating engaging and functional websites. Recently, I’ve started diving into Python programming, discovering its versatility and power in building applications. I believe that curiosity and perseverance are key to success, and I look forward to expanding my knowledge and making meaningful projects that inspire others. I'm dedicated to my growth and excited for the opportunities ahead.
-  </p>
-</section>
   
   <!-- Navigation -->
   <nav>
     <ul>
+      <li><a href="#about" class="active">About Me</a></li>
       <li><a href="#cfu">CFU</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#labs">Labs</a></li>
@@ -42,42 +29,47 @@
     </ul>
   </nav>
   
-<!-- CFU Section in index.html -->
-<section id="cfu" class="section">
-  <h2 class="section-heading">CFU - Check For Understanding</h2>
-  <div style="border: 1px solid #ccc; padding: 20px; max-width: 400px; margin: 20px auto; border-radius: 8px;">
-    <p style="text-align: center; font-size: 18px;">Click here to view</p>
-    <p style="text-align: center;">
-      <a href="cfu.html" target="_blank" style="font-size: 20px; color: #2980B9; text-decoration: none;">View CFU Links</a>
+  <!-- About Me -->
+  <section id="about">
+    <h2 class="section-heading">About Me</h2>
+    <p class="about-text">
+      Hello! My name is Vashti Dalchand, a passionate 17-year-old student eager to explore web development and programming. I love meeting new people, taking on challenges, and learning new skills. Currently, I’m in my junior year, enrolled in a CTE class focused on web development, which fuels my excitement for creating engaging websites. Recently, I started diving into Python, discovering its versatility. I believe curiosity and perseverance are key to success, and I look forward to making inspiring projects.
     </p>
-  </div>
-</section>
- <!-- Projects Section in index.html -->
-<section id="projects" class="section">
-  <h2 class="section-heading">Projects</h2>
-  <div style="border: 1px solid #ccc; padding: 20px; max-width: 400px; margin: 20px auto; border-radius: 8px;">
-    <p style="text-align: center; font-size: 18px;">Click here to view my projects</p>
-    <p style="text-align: center;">
-      <a href="projects.html" target="_blank" style="font-size: 20px; color: #2980B9; text-decoration: none;">View Projects</a>
-    </p>
-  </div>
-</section>
+  </section>
+  
+  <!-- CFU Preview -->
+  <section id="cfu">
+    <h2 class="section-heading">CFU - Check For Understanding</h2>
+    <div class="card">
+      <p>Click below to view CFU links:</p>
+      <a href="cfu.html" target="_blank" class="action-button">View CFU Links</a>
+    </div>
+  </section>
+  
+  <!-- Projects Preview -->
+  <section id="projects">
+    <h2 class="section-heading">Projects</h2>
+    <div class="card">
+      <p>Explore my projects and see my work:</p>
+      <a href="projects.html" target="_blank" class="action-button">View Projects</a>
+    </div>
+  </section>
   
   <!-- Labs -->
   <section id="labs">
     <h2 class="section-heading">Labs</h2>
-    <p>Descriptions and images of your lab activities.</p>
+    <p class="labs-info">Descriptions and images of my lab activities will go here.</p>
   </section>
   
   <!-- Journals -->
   <section id="journals">
     <h2 class="section-heading">Journals</h2>
-    <p>Reflections, daily logs, or journal entries.</p>
+    <p class="journals-info">Reflections, daily logs, or journal entries will go here.</p>
   </section>
   
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Vashti Dalchand</p>
+    <p>© 2025 Vashti Dalchand</p>
   </footer>
 </body>
 </html>
