--- a/cfu.html
+++ b/cfu.html
@@ -4,67 +4,214 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CFU - Check For Understanding</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
+  <!-- Stylesheet -->
   <style>
+    /* Reset and base styles */
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f0f0f0;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #ECF0F1;
+      margin: 0;
       padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
       color: #2C3E50;
     }
-    ul {
-      max-width: 900px;
-      margin: 0 auto;
+
+    /* Header style */
+    header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+
+    /* Navigation style */
+    nav {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
       padding: 0;
-      list-style-type: none;
+      margin: 0;
     }
-    li {
-      margin-bottom: 15px;
-    }
-    a {
-      display: block;
-      padding: 12px 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      font-size: 18px;
-      color: #2980B9;
+
+    nav ul li a {
+      padding: 10px 15px;
       text-decoration: none;
-      transition: background-color 0.3s, color 0.3s;
-    }
-    a:hover {
       background-color: #2980B9;
       color: #fff;
+      border-radius: 5px;
+      font-weight: 600;
+      transition: background-color 0.3s;
+    }
+
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: #1A5A89;
+    }
+
+    /* Main content */
+    section {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h2.section-heading {
+      font-size: 2em;
+      margin-bottom: 20px;
+      text-align: center;
+      color: #2C3E50;
+    }
+
+    /* CFU list styles */
+    #cfu-list {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .cfu-item {
+      background-color: #fff;
+      padding: 15px 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .cfu-item:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    }
+
+    .cfu-item a {
+      display: block;
+      font-size: 1.2em;
+      font-weight: 600;
+      color: #2980B9;
+      text-decoration: none;
+    }
+
+    .cfu-item a:hover {
+      color: #1A5A89;
+    }
+
+    /* Go Back button style */
+    .go-back {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 12px 25px;
+      background-color: #2980B9;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 600;
+      font-family: 'Montserrat', sans-serif;
+      transition: background-color 0.3s;
+    }
+
+    .go-back:hover {
+      background-color: #1A5A89;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 15px 0;
+      margin-top: 40px;
+      background-color: #2C3E50;
+      color: #ecf0f1;
+      font-size: 0.9em;
     }
   </style>
 </head>
 <body>
-  <!-- Go Back Button -->
-  <a href="index.html" class="go-back">Go Back</a>
-  <h1>CFU - Check For Understanding</h1>
-  <ul>
-    <li><a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank">CFU 1</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_d7L8Lfc46Ecr8Ow.py" target="_blank">CFU 2</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_j4zfCUMp8Xuu3ib.py" target="_blank">CFU 3</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_1s8MlKcp81TR5Lu.py" target="_blank">CFU 4</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_4YsbtlGbI6ZoRlW.py" target="_blank">CFU 5</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_JCCV986mHyDC0Is.py" target="_blank">CFU 6</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_Dc8bCFeKNfN2ldC.py" target="_blank">CFU 9</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_TBZxbr3OgbwWPsp.py" target="_blank">CFU 10</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_y7GkxpLOlRdmErG.py" target="_blank">CFU 12</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_ARG6l9BSNM7X1gb.py" target="_blank">CFU 13</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_RsArSjpHKnIfl7N.py" target="_blank">CFU 14</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_j9W16hWKFKDCiNe.py" target="_blank">CFU 15</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_tGEgxX0s0lnIzrX.py" target="_blank">CFU 16</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_TokbLAh6EruUMJN.py" target="_blank">CFU 17</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_vpLu0Nm8zl0xph9.py" target="_blank">CFU 18</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_xcl2TjV3unA1WQm.py" target="_blank">CFU 19</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_O34XKUCScjmUzFa.py" target="_blank">CFU 20</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_gKFM9NEtX4tJJfY.py" target="_blank">CFU 21</a></li>
-    <li><a href="https://py3.codeskulptor.org/#user310_HLVBpl7fMyvJcdJ.py" target="_blank">CFU 23</a></li>
-  </ul>
+  <!-- Header -->
+  <header>
+    <h1>Check For Understanding (CFU)</h1>
+  </header>
+
+  <!-- Navigation -->
+  <nav>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+    </ul>
+  </nav>
+
+  <!-- Main Content -->
+  <section>
+    <h2 class="section-heading">CFU Links</h2>
+    <div id="cfu-list">
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_pzlofy8ROw96IFH.py" target="_blank">CFU 1</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_d7L8Lfc46Ecr8Ow.py" target="_blank">CFU 2</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_j4zfCUMp8Xuu3ib.py" target="_blank">CFU 3</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_1s8MlKcp81TR5Lu.py" target="_blank">CFU 4</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_4YsbtlGbI6ZoRlW.py" target="_blank">CFU 5</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_JCCV986mHyDC0Is.py" target="_blank">CFU 6</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_Dc8bCFeKNfN2ldC.py" target="_blank">CFU 9</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_TBZxbr3OgbwWPsp.py" target="_blank">CFU 10</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_y7GkxpLOlRdmErG.py" target="_blank">CFU 12</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_ARG6l9BSNM7X1gb.py" target="_blank">CFU 13</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_RsArSjpHKnIfl7N.py" target="_blank">CFU 14</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_j9W16hWKFKDCiNe.py" target="_blank">CFU 15</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_tGEgxX0s0lnIzrX.py" target="_blank">CFU 16</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_TokbLAh6EruUMJN.py" target="_blank">CFU 17</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_vpLu0Nm8zl0xph9.py" target="_blank">CFU 18</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_xcl2TjV3unA1WQm.py" target="_blank">CFU 19</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_O34XKUCScjmUzFa.py" target="_blank">CFU 20</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_gKFM9NEtX4tJJfY.py" target="_blank">CFU 21</a>
+      </div>
+      <div class="cfu-item">
+        <a href="https://py3.codeskulptor.org/#user310_HLVBpl7fMyvJcdJ.py" target="_blank">CFU 23</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <a href="index.html" class="go-back">Go Back</a>
+  </footer>
 </body>
 </html>
