--- a/projects.html
+++ b/projects.html
@@ -147,14 +147,14 @@
     </div>
 
     <!-- Code.org App Project -->
-    <div class="project-card">
-      <div class="project-media">
-        <iframe src="https://studio.code.org/projects/applab/etAU4NFR4glSl_dKvNPFTaD0Zcfc1-uZRAEP15HcQGA/embed?nosource" width="392" height="620" style="border:0px;"></iframe>
-      </div>
-      <div class="project-title">My Code.org App</div>
-      <div class="project-desc">This is my Code.org app embedded below.</div>
-      <a class="view-project" href="https://studio.code.org/projects/applab/etAU4NFR4glSl_dKvNPFTaD0Zcfc1-uZRAEP15HcQGA" target="_blank">View on Code.org</a>
-    </div>
+<div class="project-card">
+  <div class="project-media" style="display:flex; justify-content:center; align-items:center;">
+    <iframe src="https://studio.code.org/projects/applab/etAU4NFR4glSl_dKvNPFTaD0Zcfc1-uZRAEP15HcQGA/embed?nosource" width="392" height="620" style="border:0px; margin:auto;"></iframe>
+  </div>
+  <div class="project-title">My Code.org App</div>
+  <div class="project-desc">This is my Code.org app embedded below.</div>
+  <a class="view-project" href="https://studio.code.org/projects/applab/etAU4NFR4glSl_dKvNPFTaD0Zcfc1-uZRAEP15HcQGA" target="_blank">View on Code.org</a>
+</div>
 
     <!-- Add more project cards as needed -->
   </div>
