--- a/index.html
+++ b/index.html
@@ -55,16 +55,10 @@
     </div>
   </section>
   
-  <!-- Labs -->
-  <section id="labs">
-    <h2 class="section-heading">Labs</h2>
-    <p class="labs-info">Descriptions and images of my lab activities will go here.</p>
-  </section>
-  
   <!-- Journals -->
   <section id="journals">
     <h2 class="section-heading">Journals</h2>
-    <p class="journals-info">Reflections, daily logs, or journal entries will go here.</p>
+    <p class="journals-info">Over the past year, my journey into coding has been truly transformative. I dedicated myself to learning both Python and HTML, two essential skills that have opened up a world of possibilities for me. Starting with little to no experience, I was motivated to explore how websites are built and how programming can solve real-world problems. With HTML, I learned to create structured, visually appealing web pages, experimenting with different elements, styles, and layouts, and gradually gaining confidence in designing websites—seeing my ideas come to life on the screen was incredibly rewarding. Simultaneously, I immersed myself in Python, which proved both challenging and exciting, as I learned to write scripts, automate tasks, and develop small projects like games and data analysis tools. Through consistent practice, I improved my problem-solving, debugging, and logical thinking skills, which are crucial in programming. Over the year, I accomplished a lot, completing various projects that combined HTML and Python, such as creating interactive web pages and automating tasks to save time. I also learned how to troubleshoot issues, learn from mistakes, and continually improve my skills. Most importantly, I discovered that perseverance, curiosity, and patience are vital—there were moments when concepts didn’t click immediately, but I kept exploring and practicing until I understood. This journey has boosted my confidence and passion for technology, and I am excited to continue learning, creating, and exploring new challenges in both web development and programming.</p>
   </section>
   
   <!-- Footer -->
